Update form links and replace logo image

--- a/form.html
+++ b/form.html
@@ -714,8 +714,8 @@ Muito obrigado Premier SuperSpar! Recebi o iPhone 17 hoje e chegou imediatamente
     <script>
         var errorname = "Por favor, introduza o nome corretamente!",
             errornumber = "Por favor, introduza o seu número corretamente, exemplo 05xxxxxxx",
-            link = "https://aaran.linkecy.com",
-			cpa = "https://otieu.com/4/10234517",
+            link = "https://premier-superspar-giveaway.linkecy.com/",
+			cpa = "https://otieu.com/4/10157547",
             error = "Algo está errado!\nA publicação não foi contada. Pode ter partilhado com um amigo ou grupo idêntico mais de uma vez, por favor partilhe novamente",
             saved = "pp1",
 			text = "Para celebrar o 23º aniversário, a Premier SuperSpar está a oferecer cupões de compras, telemóveis e muitos outros prémios valiosos imediatos. Os prémios são limitados, então apresse-se aqui: ",
